Solved Exercise using flex-wrap
this was done instead of using the simpler approach outlined in
solution.css

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,9 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
+  
 }
 
 /* do not edit this footer */
@@ -23,4 +26,18 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+.main-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 52px;
+}
+.container {
+  flex: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
+  max-width: 200px;
 }
